# APO

hw02/: main.c
hw02/tst/: main.c  output.txt
semestralka/: Makefile  change_me  change_me.c  depend  julia_set.c  julia_set.h
semestralka/binrep/mzapo_binrep/: mzapo_binrep.c
semestralka_1/: #julia_set.c#  CMakeLists.txt  Makefile  change_me  change_me.c  julia_set.c  julia_set.h
semestralka_1/binrep/mzapo_binrep/: Makefile
semestralka_1/binrep/print_binrep/: Makefile  print_binrep.c
